--- a/views/register.ejs
+++ b/views/register.ejs
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-<h2>Login Form</h2>
+<h2>Register</h2>
 
 <form id="createUserForm">
     <div class="imgcontainer">
@@ -32,41 +32,9 @@
 <div id="toast" class="toast"></div>
 
 <script>
+
     const form = document.getElementById('createUserForm')
     const toast = document.getElementById('toast');
-
-    form.addEventListener('submit', (e) => {
-        e.preventDefault();
-
-        console.log('jsonval');
-
-        const formData = {
-            email: document.getElementById('email').value,
-            name: document.getElementById('name').value
-        }
-        fetch('/create_user', {
-            method: 'POST',
-            headers: {
-                'Content-Type': 'application/json',
-            },
-            body: JSON.stringify(formData)
-        })
-            .then(response => {
-                const jsonval = response.json()
-                return jsonval
-            })
-            .then(data =>{
-                if(data.error){
-                    showToast(data.error, 'error');
-                }else{
-                    showToast('User added successfully', 'success');
-                    form.reset();
-                }
-            })
-            .catch(err =>{
-                showToast('An unexpected error occurred!', 'error');
-            });
-    });
 
     function showToast(message, type){
         toast.textContent = message;
@@ -81,6 +49,41 @@
             toast.className = 'toast';
         }, 3000);
     }
+
+
+    form.addEventListener('submit', (e) => {
+        e.preventDefault();
+
+        const formData = {
+            email: document.getElementById('email').value,
+            name: document.getElementById('name').value
+        }
+        fetch('/api/create_user', {
+            method: 'POST',
+            headers: {
+                'Content-Type': 'application/json',
+            },
+            body: JSON.stringify(formData)
+        })
+            .then(response => {
+                return response.json()
+            })
+            .then(data =>{
+                if(data.error){
+                    showToast(data.error, 'error');
+                }else{
+                    // showToast('User added successfully',
+                    //     'success '+ data.redirectUrl);
+                    window.location.href =data.redirectUrl;
+                    form.reset();
+                }
+            })
+            .catch(err =>{
+                showToast('An unexpected error occurred!', 'error');
+            });
+    });
+
 </script>
+<!--<script src="./toast.js"></script>-->
 </body>
 </html>
